# BlowRender

./: .gitignore  CMakeLists.txt
sample/: CMakeLists.txt  Rasterizate.cpp  Rasterizate.h  RayTrace.cpp  RayTrace.h  SceneShader.h  TestScene.h  main.cpp
src/: CMakeLists.txt
src/core/: BFloat.h  CMakeLists.txt  Model.h  log.h  scene.cpp  scene.h
src/core/Device/: Device.cpp  Device.h
src/core/Graphics/: AABB.cpp  AABB.h  AABB2d.h  BVH.h  BilinearInterpolation.h  Camera.h  Format.h  FragmentShader.h  Framebuffer.cpp  Framebuffer.h  Graphics.h  Image.h  KDTree.hpp  Light.h  Line.h  NTree.hpp  OTree.hpp  Object.h  OrthoCamera.cpp  OrthoCamera.h  PrimitiveAssembly.h  ProjectionCamera.cpp  ProjectionCamera.h  Rasterization.h  Ray.h  RenderPipeline.h  RenderSystem.h  Sphere.h  Texture.h  Triangle.h  VertexBuffer.h  VertexDispatch.h  VertexShader.h  alloc.hpp
src/core/Rasterize/: RasterizePipeline.h
src/core/Ray/: RayCamera.h  RayTracePipeline.cpp  RayTracePipeline.h
src/core/device/: Device.cpp  Device.h
src/core/ray/: RayCamera.cpp  RayCamera.h  RayTracePipeline.cpp  RayTracePipeline.h
src/core/simd/: config.h  sse.h  vec.h  vec2.hpp  vec2.sse2.inl
src/core/simd/detail/: vec2.hpp  vec2.inl  vec3.hpp
src/editor/: CMakeLists.txt  ComponentType.inl  IComponent.h  KeyboardInputComponent.h  MouseInputComponent.h  Object.h  a.txt
src/helper/: CMakeLists.txt  ModelLoad.cpp  ModelLoad.h  TextureLoad.cpp  TextureLoad.h
src/rui/: CMakeLists.txt  widget.h  widget_background.h  widget_base.h  widget_brush.h  widget_color.h  widget_container.h  widget_layout.h  widget_painter.h  widget_pen.h  widget_rect.h  widget_region.h  widget_root.h  widget_shape.h  widget_vertex.h  widget_window.h
src/win/: CMakeLists.txt  VulkanEnd.cpp  VulkanEnd.h  win32.cpp  win32.h
third/glad/glad/: glad.c  glad.h  glad_wgl.c  glad_wgl.h
third/glfw-3.2.1/src/: CMakeLists.txt
third/glm/glm/detail/: type_vec.hpp
third/utils/: utils.h
unit_test/: CMakeLists.txt  SutherlandHodgman.cpp  main.cpp  test_ray_aabb.cpp
